Dark mode and bug fix

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -19,6 +19,8 @@
     --color-secondary-600: #450b80;
     --color-secondary-700: #32065e;
     --color-table: #cfd1cd;
+    --color-dark: #0a0a0a;
+    --color-light: #fcfafa;
 
     --font-sans: "Figtree", sans-serif;
     --font-hanken-grotesk: "Hanken Grotesk", sans-serif;
@@ -134,6 +136,7 @@ body, html {
     margin: 0;
     padding: 0;
     width: 100%;
+    overflow-x: hidden;
 }
 
 
